--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "body-parser": "^1.19.0",
         "express": "^4.16.4",
         "http-proxy-middleware": "^1.0.3",
+        "mysql": "^2.18.1",
         "nodemon": "^2.0.3"
     },
     "devDependencies": {
